// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FoniPanel render snapshots > RVC enabled with bandit model 1`] = `
"╭────────────────────── Foni ──────────────────────╮
│                                                  │
│ ▸ TTS        [OFF] -│
│   Language   [EN]                │
│   Speed      1.0x  +/- to adjust│
│   Backend    [auto] space to cycle│
│                                                  │
│─────────────────── RVC Voice ────────────────────│
│                                                  │
│   Voice conv [ ON] bandit│
│   Model      bandit           │
│   Server     http://localhost:5050  …│
│                                                  │
├──────────────────────────────────────────────────┤
│                                                  │
│ ↑↓ move  ·  space…│
│                                                  │
╰──────────────────────────────────────────────────╯"
`;

exports[`FoniPanel render snapshots > TTS enabled 1`] = `
"╭────────────────────── Foni ──────────────────────╮
│                                                  │
│ ▸ TTS        [ ON] silero│
│   Language   [EN]                │
│   Speed      1.0x  +/- to adjust│
│   Backend    [auto] space to cycle│
│                                                  │
│─────────────────── RVC Voice ────────────────────│
│                                                  │
│   Voice conv [OFF] -     │
│   Model      bandit           │
│   Server     http://localhost:5050  …│
│                                                  │
├──────────────────────────────────────────────────┤
│                                                  │
│ ↑↓ move  ·  space…│
│                                                  │
╰──────────────────────────────────────────────────╯"
`;

exports[`FoniPanel render snapshots > initial state (TTS off, RVC off, EN) 1`] = `
"╭────────────────────── Foni ──────────────────────╮
│                                                  │
│ ▸ TTS        [OFF] -│
│   Language   [EN]                │
│   Speed      1.0x  +/- to adjust│
│   Backend    [auto] space to cycle│
│                                                  │
│─────────────────── RVC Voice ────────────────────│
│                                                  │
│   Voice conv [OFF] -     │
│   Model      bandit           │
│   Server     http://localhost:5050  …│
│                                                  │
├──────────────────────────────────────────────────┤
│                                                  │
│ ↑↓ move  ·  space…│
│                                                  │
╰──────────────────────────────────────────────────╯"
`;

exports[`FoniPanel render snapshots > language RU 1`] = `
"╭────────────────────── Foni ──────────────────────╮
│                                                  │
│ ▸ TTS        [OFF] -│
│   Language   [RU]               │
│   Speed      1.0x  +/- to adjust│
│   Backend    [auto] space to cycle│
│                                                  │
│─────────────────── RVC Voice ────────────────────│
│                                                  │
│   Voice conv [OFF] -     │
│   Model      bandit           │
│   Server     http://localhost:5050  …│
│                                                  │
├──────────────────────────────────────────────────┤
│                                                  │
│ ↑↓ move  ·  space…│
│                                                  │
╰──────────────────────────────────────────────────╯"
`;

exports[`FoniPanel render snapshots > narrow terminal (40 cols) 1`] = `
"╭──────────────── Foni ────────────────╮
│                                      │
│ ▸ TTS        [OFF] -│
│   Language   [EN]    │
│   Speed      1.0x  +/- to adjust│
│   Backend    [auto] space to cycle│
│                                      │
│───────────── RVC Voice ──────────────│
│                                      │
│   Voice conv [OFF] -│
│   Model      bandit│
│   Server     http://local…│
│                                      │
├──────────────────────────────────────┤
│                                      │
│ ↑↓ move  ·  …│
│                                      │
╰──────────────────────────────────────╯"
`;

exports[`FoniPanel render snapshots > speed 1.5x 1`] = `
"╭────────────────────── Foni ──────────────────────╮
│                                                  │
│ ▸ TTS        [OFF] -│
│   Language   [EN]                │
│   Speed      1.5x  +/- to adjust│
│   Backend    [auto] space to cycle│
│                                                  │
│─────────────────── RVC Voice ────────────────────│
│                                                  │
│   Voice conv [OFF] -     │
│   Model      bandit           │
│   Server     http://localhost:5050  …│
│                                                  │
├──────────────────────────────────────────────────┤
│                                                  │
│ ↑↓ move  ·  space…│
│                                                  │
╰──────────────────────────────────────────────────╯"
`;
